engine/tests/fixtures/invalid/http-api-semantics/shape-input-status.tg
shape shape_input_get_task_export_job {
  name "Status Input"
  description "Status input"

  fields {
    job_id uuid required
  }

  status active
}
